crates/cli/tests/snapshots/cli__config__show_defaults.snap
---
source: crates/cli/tests/cli.rs
expression: env.normalize(&stdout(&out))
---
# profile: none
# layers, later ones win:
#   1. defaults

[store]
bookkeeper = "auto"                          # defaults
kind = "nb"                                  # defaults
notebook = "home"                            # defaults

[workflow]
default_status = "ready"                     # defaults
statuses = ["in-progress", "ready", "waiting", "blocked", "later"] # defaults

[work]
worktree_manager = "git"                     # defaults

[launch]
default = "claude"                           # defaults
detached = "auto"                            # defaults
env = "direnv"                               # defaults

[launch.claude]

[launch.herdr]
placement = "auto"                           # defaults

[ui]
glow_style = "dark"                          # defaults
no_osc8 = false                              # defaults
pager = "less -RFX"                          # defaults
week_start = "monday"                        # defaults

[ui.colors]

[ui.keys]

[ui.theme]
preset = "dark"                              # defaults

[ui.theme.colors]

[forge]

[report.summary]
command = "claude -p"                        # defaults
summarizer = "llm"                           # defaults

[hooks]
post-create = []                             # defaults
post-done = []                               # defaults
pre-launch = []                              # defaults
